--- a/memory/style.css
+++ b/memory/style.css
@@ -1,3 +1,7 @@
+body {
+    background: #d0d6d6;
+}
+
 .autor {
     margin-top: -30px;
     padding-left: 20px;
@@ -130,10 +134,13 @@
 }
 
 .plansza {
-    padding: 100px 7px;
-    background: #d0d6d6;
-    height: 100vh;
     zoom: 0.7;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+    gap: 10px 10px;
+    justify-items: center;
+    align-items: center;
 }
 
 .karta {
