--- a/memory/style.css
+++ b/memory/style.css
@@ -1,3 +1,7 @@
+* {
+    -webkit-tap-highlight-color: transparent;
+}
+
 body {
     background: #d0d6d6;
 }
@@ -161,7 +165,6 @@ body {
     display: inline-flex;
     cursor: pointer;
     margin: 5px;
-    -webkit-tap-highlight-color: transparent;
 }
 
 .karta > * {
